style: ruff lint 自动修复 + 代码格式化
- ruff check --fix: 修复 47 个 lint 问题（未使用导入、类型注解等）
- ruff format: 统一 57 个文件的代码格式
- 剩余 37 个 E402/F841 警告为结构性问题，暂不处理

--- a/.gitignore
+++ b/.gitignore
@@ -226,3 +226,22 @@ Thumbs.db
 
 # API response cache
 data/cache/
+
+# ===================
+# Supplemented common patterns
+# ===================
+
+# Python wheels
+*.whl
+
+# Virtual environments (with trailing slash)
+.venv/
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# Environment
+.env.local
