fix: X/Twitter 多 RSSHub 实例轮询 + auto fallback 到 X API
- rsshub_urls 支持多实例列表，按顺序尝试，第一个成功即返回
- 记住上次成功实例优先使用，全部失败标记 unhealthy 跳过
- 检测 HTTP 302 重定向（rsshub.app 被封的表现）
- backend=auto 模式：RSSHub 失败自动降级到 X API v2
- 大幅减少日志噪音（重试日志改为 DEBUG 级别）
- 兼容旧配置 rsshub_url 单 URL 字符串
- 新增 9 个测试用例覆盖 fallback 逻辑 (44 tests total)

--- a/config.yaml
+++ b/config.yaml
@@ -1004,12 +1004,18 @@ database:
 
 x_tracker:
   enabled: true
-  # Backend: "rsshub" (free, recommended) or "api" (needs bearer token)
-  backend: rsshub
-  # RSSHub instance URL (public or self-hosted)
-  rsshub_url: "https://rsshub.app"
-  # X API v2 bearer token (only needed if backend is "api")
-  bearer_token: ""
+  # Backend: "auto" (recommended, try RSSHub then API) | "rsshub" | "api"
+  backend: auto
+  # RSSHub instance URLs (tried in order, first success wins)
+  # Public instances may be unreliable — self-host for best results:
+  #   docker run -p 1200:1200 diygod/rsshub
+  rsshub_urls:
+    - "https://rsshub.app"
+    - "https://rsshub.rssforever.com"
+    - "https://rsshub.ktachibana.party"
+  # X API v2 bearer token (fallback when RSSHub fails, or primary when backend=api)
+  # Get one at https://developer.x.com — free tier: 1500 reads/month
+  bearer_token: "${X_BEARER_TOKEN}"
 
   # Monitored accounts - AI labs, researchers, data vendors
   # Total: ~100 accounts across 12 categories
