fix: improve RSSHub resilience with consecutive-fail threshold
Replace aggressive _rsshub_healthy kill switch with a consecutive
failure counter (threshold=5). One account failure no longer disables
RSSHub for all remaining accounts. Also reduce parallelism to 2
workers and add success/fail stats logging.

Results: 39/54 accounts via local RSSHub (was 0/98), 16 active with
44 relevant tweets.

--- a/config.yaml
+++ b/config.yaml
@@ -1010,12 +1010,13 @@ x_tracker:
   # Public instances may be unreliable — self-host for best results:
   #   docker run -p 1200:1200 diygod/rsshub
   rsshub_urls:
+    - "http://localhost:1200"
     - "https://rsshub.app"
     - "https://rsshub.rssforever.com"
     - "https://rsshub.ktachibana.party"
   # X API v2 bearer token (fallback when RSSHub fails, or primary when backend=api)
-  # Get one at https://developer.x.com — free tier: 1500 reads/month
-  bearer_token: "${X_BEARER_TOKEN}"
+  # Get one at https://developer.x.com (requires paid plan)
+  bearer_token: ""
 
   # Monitored accounts - AI labs, researchers, data vendors
   # Total: ~100 accounts across 12 categories
