fix: 修复数据质量异常 — 分类器/X账号/博客抓取/异常分离
1. 分类器覆盖率: 37% → 84%
   - RL_ENVIRONMENT 扩展机器人/具身智能关键词 (robocasa, embodied, haptic 等)
   - MULTIMODAL 增加语音/文档/CLIP/3D 关键词
   - CODE 增加形式化验证关键词
   - EVALUATION 增加安全/控制任务关键词

2. X/Twitter 修复 5 个错误账号名
   - EleutherAI → AiEleuther
   - lmsys_org → lmsysorg
   - Baichuan_Inc → BaichuanAI
   - surge_ai → HelloSurgeAI
   - ArgillaIO → argilla_io

3. Meta AI 博客修复
   - RSS 源从已废弃的 research.facebook.com/feed/ 更新为 engineering.fb.com/feed/
   - 博客 URL 从 research.facebook.com 更新为 ai.meta.com/blog/
   - 新增 URL 日期提取功能 (_extract_date_from_url) 防止旧文章绕过日期过滤
   - Browser scraping 路径增加日期过滤

4. 异常报告分离
   - insights prompt 移除第5节"异常与待排查"(管理层报告不含工程信息)
   - 新增 format_anomalies_report() 生成独立 _anomalies.md 文件
   - 包含: 数据质量告警、数据源覆盖统计、失败账号列表、分类覆盖率
   - x_tracker.fetch_all() 返回 metadata (rsshub 成功/失败统计)
   - llm_client 移除"不要输出第5节"的 workaround
   - scan.md 技能更新: 第5步展示异常报告

--- a/config.yaml
+++ b/config.yaml
@@ -469,9 +469,9 @@ watched_vendors:
       type: "auto"
       rss_url: "https://www.deepmind.com/blog/feed"
     - name: "Meta AI Research"
-      url: "https://research.facebook.com/"
+      url: "https://ai.meta.com/blog/"
       type: "auto"
-      rss_url: "https://research.facebook.com/feed/"
+      rss_url: "https://engineering.fb.com/feed/"
     # --- Chinese AI Labs ---
     - name: "Zhipu AI"
       url: "https://www.zhipuai.cn/news"
@@ -1044,16 +1044,16 @@ x_tracker:
     - RekaAILabs
     - upstageai
     # ── Research / Open Source (5) ──
-    - EleutherAI
+    - AiEleuther
     - huggingface
     - allen_ai
-    - lmsys_org
+    - lmsysorg
     - EpochAIResearch
     # ── China Labs (14) ──
     - Alibaba_Qwen
     - deepseek_ai
     - ZhipuAI
-    - Baichuan_Inc
+    - BaichuanAI
     - 01AI_Yi
     - Kimi_Moonshot
     - MiniMax__AI
@@ -1079,8 +1079,8 @@ x_tracker:
     - StanfordHAI
     # ── Data Vendors & Platforms (9) ──
     - scale_AI
-    - surge_ai
-    - ArgillaIO
+    - HelloSurgeAI
+    - argilla_io
     - SnorkelAI
     - LabelBox
     - weights_biases
