feat: 新增 3 个 X/Twitter 研究者账户 (emollick, Hesamation, vasuman)
98 → 101 账户，新增 AI 科学/ML 研究/Agent 方向研究者

--- a/config.yaml
+++ b/config.yaml
@@ -1101,7 +1101,7 @@ x_tracker:
     - ShayneRedford
     - sayashk
     - JaredKaplan
-    # ── Researchers & Influencers (28) ──
+    # ── Researchers & Influencers (31) ──
     - karpathy
     - ylecun
     - jimfan
@@ -1130,6 +1130,9 @@ x_tracker:
     - markchen90
     - karlcobbe
     - aidangomez
+    - emollick
+    - Hesamation
+    - vasuman
 
   # Search keywords (API backend only)
   search_keywords:
