--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,7 @@ dependencies = [
     "sqlite-utils>=3.35",
     "playwright>=1.40.0",
     "anthropic>=0.40.0",
+    "aiohttp>=3.9.0",
 ]
 
 [project.optional-dependencies]
@@ -54,6 +55,7 @@ mcp = [
 dev = [
     "pytest>=8.0.0",
     "pytest-asyncio>=0.23.0",
+    "aioresponses>=0.7.6",
 ]
 all = [
     "ai-dataset-radar[mcp,dev]",
@@ -68,6 +70,9 @@ Issues = "https://github.com/liuxiaotong/ai-dataset-radar/issues"
 [tool.setuptools.packages.find]
 where = ["."]
 include = ["src*", "mcp_server*", "agent*"]
+
+[tool.pytest.ini_options]
+asyncio_mode = "auto"
 
 [tool.ruff]
 line-length = 100
