fix: 博客分类筛选 + 数据集分类对齐 — /blogs category 生效, Dashboard 下拉值修正

--- a/config.yaml
+++ b/config.yaml
@@ -379,264 +379,326 @@ watched_vendors:
   blogs:
     - name: "Argilla"
       url: "https://argilla.io/blog/"
+      category: "data_vendor"
       type: "auto"
       rss_url: "https://argilla.io/blog/rss.xml"
     - name: "Qwen Blog"
       url: "https://qwenlm.github.io/"
+      category: "data_vendor"
       type: "auto"
       rss_url: "https://qwenlm.github.io/feed.xml"
     - name: "Hugging Face"
       url: "https://huggingface.co/blog"
+      category: "data_vendor"
       type: "auto"
       rss_url: "https://huggingface.co/blog/feed.xml"
     - name: "Scale AI"
       url: "https://scale.com/blog"
+      category: "data_vendor"
       type: "browser"
       selector: "a[href*='/blog/']"
     - name: "Snorkel AI"
       url: "https://snorkel.ai/blog/"
+      category: "data_vendor"
       type: "auto"
       selector: "article, .blog-card, [class*='post'], [class*='blog']"
     - name: "Surge AI Blog"
       url: "https://surgehq.ai/blog"
+      category: "data_vendor"
       type: "auto"
       selector: "article, [class*='post'], [class*='blog'], [class*='card']"
     - name: "Surge AI Research"
       url: "https://surgehq.ai/research"
+      category: "data_vendor"
       type: "auto"
       selector: "article, [class*='post'], [class*='card'], a[href*='/research']"
     # --- Data Vendors (Tier 1) ---
     - name: "Mercor Blog"
       url: "https://www.mercor.com/blog"
+      category: "data_vendor"
       type: "auto"
       selector: "article, [class*='post'], [class*='blog'], [class*='card']"
     - name: "Mercor Research"
       url: "https://www.mercor.com/research"
+      category: "data_vendor"
       type: "auto"
       selector: "article, [class*='post'], [class*='card'], a[href*='/research']"
     - name: "Invisible Technologies"
       url: "https://invisibletech.ai/blog"
+      category: "data_vendor"
       type: "browser"
       selector: ".w-dyn-item, .blog--card"
     # --- Data Vendors (Tier 2) ---
     - name: "Prolific"
       url: "https://www.prolific.com/resources"
+      category: "data_vendor"
       type: "browser"
       selector: ".Thumb, .Archive a[href*='/resources/']"
     - name: "Anthropic Research"
       url: "https://www.anthropic.com/research"
+      category: "data_vendor"
       type: "auto"
       selector: "article, [class*='post'], [class*='card'], a[href*='/research/']"
     - name: "Anthropic News"
       url: "https://www.anthropic.com/news"
+      category: "data_vendor"
       type: "auto"
       selector: "article, [class*='post'], [class*='card'], a[href*='/news/']"
     - name: "Anthropic Alignment Science"
       url: "https://alignment.anthropic.com/"
+      category: "data_vendor"
       type: "auto"
       selector: "article, [class*='post'], [class*='card'], a[href*='/blog/']"
     - name: "Anthropic Frontier Red Team"
       url: "https://red.anthropic.com/"
+      category: "data_vendor"
       type: "auto"
       selector: "article, [class*='post'], [class*='card'], a[href*='/2026/']"
     - name: "Claude API Release Notes"
       url: "https://docs.anthropic.com/en/release-notes/overview"
+      category: "data_vendor"
       type: "auto"
       selector: "article, [class*='release'], [class*='changelog'], [class*='card']"
     - name: "Tencent Hunyuan Research"
       url: "https://hy.tencent.com/research"
+      category: "data_vendor"
       type: "browser"
       selector: ".blog-item"
     - name: "DeepSeek"
       url: "https://api-docs.deepseek.com/news"
+      category: "data_vendor"
       type: "browser"
       selector: "a[href*='/news'], article, [class*='post']"
     - name: "Baidu AI Research"
       url: "https://research.baidu.com/Blog"
+      category: "data_vendor"
       type: "scrape"
       selector: "article, [class*='blog'], [class*='post'], [class*='news']"
     # --- US Frontier Labs ---
     - name: "OpenAI Blog"
       url: "https://openai.com/blog"
+      category: "us_frontier"
       type: "auto"
       selector: "article, [class*='post'], [class*='blog'], [class*='card']"
     - name: "Google AI Blog"
       url: "https://blog.google/technology/ai/"
+      category: "us_frontier"
       type: "auto"
       rss_url: "https://blog.google/technology/ai/rss/"
     - name: "DeepMind Blog"
       url: "https://www.deepmind.com/blog"
+      category: "us_frontier"
       type: "auto"
       rss_url: "https://www.deepmind.com/blog/feed"
     - name: "Meta AI Research"
       url: "https://ai.meta.com/blog/"
+      category: "us_frontier"
       type: "auto"
       rss_url: "https://engineering.fb.com/feed/"
     # --- Chinese AI Labs ---
     - name: "Zhipu AI"
       url: "https://www.zhipuai.cn/news"
+      category: "china"
       type: "browser"
       selector: "article, [class*='news'], [class*='post'], [class*='card']"
     - name: "Moonshot AI"
       url: "https://www.moonshot.cn/"
+      category: "china"
       type: "browser"
       selector: "article, [class*='news'], [class*='post'], [class*='blog']"
     - name: "01.AI Yi"
       url: "https://www.01.ai/blog"
+      category: "china"
       type: "auto"
       selector: "article, [class*='post'], [class*='blog'], [class*='card']"
     - name: "SenseTime Research"
       url: "https://www.sensetime.com/cn/news-detail"
+      category: "china"
       type: "browser"
       selector: "article, [class*='news'], [class*='post'], [class*='list']"
     # --- Chinese Data Vendors ---
     - name: "海天瑞声 SpeechOcean"
       url: "https://www.haitianruisheng.com/aboutus/news/catid-23.htm"
+      category: "china"
       type: "browser"
       selector: ".news-wrapper a[href*='/news-'], a[href*='/news-']"
     - name: "整数智能 MolarData"
       url: "https://www.molardata.com/blog"
+      category: "china"
       type: "browser"
       selector: ".articles-item-wrap, a[href*='/article/']"
     - name: "数据堂 Datatang"
       url: "https://datatang.com/news"
+      category: "china"
       type: "browser"
       selector: "a[href*='/news/']"
     - name: "智源社区 BAAI"
       url: "https://hub.baai.ac.cn/"
+      category: "china"
       type: "browser"
       selector: "article, [class*='post'], [class*='card'], a[href*='/view/']"
     # --- Emerging Labs ---
     - name: "Mistral AI"
       url: "https://mistral.ai/news/"
+      category: "us_emerging"
       type: "browser"
       selector: "a[href*='/news/']"
     - name: "Cohere Blog"
       url: "https://cohere.com/blog"
+      category: "us_emerging"
       type: "browser"
       selector: "[class*='h-full'] a[href*='/blog/']"
     - name: "AI21 Labs"
       url: "https://www.ai21.com/blog"
+      category: "us_emerging"
       type: "auto"
       selector: "article, [class*='post'], [class*='blog'], [class*='card']"
     - name: "Together AI"
       url: "https://www.together.ai/blog"
+      category: "us_emerging"
       type: "auto"
       selector: "article, [class*='post'], [class*='blog'], [class*='card']"
     # --- Research Institutions ---
     - name: "Stanford HAI"
       url: "https://hai.stanford.edu/news"
+      category: "research"
       type: "browser"
       selector: "article, [class*='news'], [class*='post'], [class*='card']"
     - name: "Berkeley BAIR"
       url: "https://bair.berkeley.edu/blog/"
+      category: "research"
       type: "auto"
       rss_url: "https://bair.berkeley.edu/blog/feed.xml"
     - name: "Allen AI Blog"
       url: "https://allenai.org/blog"
+      category: "research"
       type: "browser"
       selector: "a[href*='/blog/']"
     # --- New: Global Tech Giants ---
     - name: "Apple Machine Learning Research"
       url: "https://machinelearning.apple.com/"
+      category: "us_frontier"
       type: "auto"
       rss_url: "https://machinelearning.apple.com/rss.xml"
     - name: "Microsoft Research Blog"
       url: "https://www.microsoft.com/en-us/research/blog/"
+      category: "us_frontier"
       type: "auto"
       rss_url: "https://www.microsoft.com/en-us/research/feed/"
     - name: "Amazon Science"
       url: "https://www.amazon.science/"
+      category: "us_frontier"
       type: "auto"
       rss_url: "https://www.amazon.science/index.rss"
     - name: "Stability AI"
       url: "https://stability.ai/news"
+      category: "us_frontier"
       type: "browser"
       selector: "article, [class*='post'], [class*='card'], a[href*='/news/']"
     - name: "TII Falcon Blog"
       url: "https://falconllm.tii.ae/blog.html"
+      category: "us_frontier"
       type: "auto"
       selector: "article, [class*='post'], [class*='blog'], [class*='card']"
     # --- New: Korean & Japanese Labs ---
     - name: "Naver AI Lab"
       url: "https://clova-ai.blog/"
+      category: "research"
       type: "auto"
       selector: "article, [class*='post'], [class*='entry']"
     - name: "Sakana AI"
       url: "https://sakana.ai/blog/"
+      category: "research"
       type: "auto"
       selector: "article, [class*='post'], [class*='blog'], [class*='card']"
     # --- New: European Research ---
     - name: "LAION Blog"
       url: "https://laion.ai/blog/"
+      category: "research"
       type: "auto"
       selector: "article, [class*='post'], [class*='entry']"
     # --- New: Data Vendor Blogs ---
     - name: "Toloka AI Blog"
       url: "https://toloka.ai/blog"
+      category: "data_vendor"
       type: "auto"
       selector: "article, [class*='post'], [class*='blog'], [class*='card']"
     - name: "SuperAnnotate"
       url: "https://www.superannotate.com/blog"
+      category: "data_vendor"
       type: "auto"
       selector: "article, [class*='post'], [class*='blog'], [class*='card']"
     - name: "iMerit Blog"
       url: "https://imerit.net/blog/"
+      category: "data_vendor"
       type: "auto"
       selector: "article, [class*='post'], [class*='blog'], [class*='card']"
     - name: "Defined.ai Blog"
       url: "https://www.defined.ai/blog"
+      category: "data_vendor"
       type: "auto"
       selector: "article, [class*='post'], [class*='blog'], [class*='card']"
     # --- Researcher Blogs & Community ---
     - name: "Lil'Log (Lilian Weng)"
       url: "https://lilianweng.github.io/"
+      category: "research"
       type: "auto"
       rss_url: "https://lilianweng.github.io/index.xml"
     - name: "fast.ai Blog"
       url: "https://www.fast.ai/posts/"
+      category: "research"
       type: "auto"
       rss_url: "https://www.fast.ai/index.xml"
     - name: "Interconnects (Nathan Lambert)"
       url: "https://www.interconnects.ai/"
+      category: "research"
       type: "auto"
       selector: "article, [class*='post'], [class*='card']"
     - name: "Sebastian Raschka - Ahead of AI"
       url: "https://magazine.sebastianraschka.com/"
+      category: "research"
       type: "auto"
       selector: "article, [class*='post'], [class*='card']"
     - name: "LessWrong AI"
       url: "https://www.lesswrong.com/tag/ai"
+      category: "research"
       type: "auto"
       rss_url: "https://www.lesswrong.com/feed.xml?view=ai"
     - name: "Alignment Forum"
       url: "https://www.alignmentforum.org/"
+      category: "research"
       type: "auto"
       rss_url: "https://www.alignmentforum.org/feed.xml"
     - name: "The Gradient"
       url: "https://thegradient.pub/"
+      category: "research"
       type: "auto"
       rss_url: "https://thegradient.pub/rss/"
     - name: "Epoch AI Blog"
       url: "https://epoch.ai/blog"
+      category: "research"
       type: "auto"
       selector: "article, [class*='post'], [class*='blog'], [class*='card']"
     # --- Community & Aggregators ---
     - name: "LMSYS Org Blog"
       url: "https://lmsys.org/blog/"
+      category: "research"
       type: "auto"
       selector: "article, [class*='post'], [class*='entry']"
     - name: "EleutherAI Blog"
       url: "https://blog.eleuther.ai/"
+      category: "research"
       type: "auto"
       rss_url: "https://blog.eleuther.ai/feed.xml"
     # --- New: Chinese Platforms ---
     - name: "ModelScope Community"
       url: "https://community.modelscope.cn/articles"
+      category: "china"
       type: "browser"
       selector: "article, [class*='post'], [class*='article'], [class*='card']"
     - name: "天池 Tianchi AI"
       url: "https://tianchi.aliyun.com/competition"
+      category: "china"
       type: "browser"
       selector: "[class*='competition'], [class*='card'], a[href*='/competition/']"
 
@@ -853,10 +915,13 @@ sources:
     feeds:
       - name: Argilla
         url: https://argilla.io/blog/feed
+        category: "china"
       - name: Qwen
         url: https://qwenlm.github.io/feed.xml
+        category: "china"
       - name: Hugging Face
         url: https://huggingface.co/blog/feed.xml
+        category: "china"
 
   # ModelScope - 魔搭社区（中国 HuggingFace 等价平台）
   modelscope:
