--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,8 @@ dependencies = [
     "playwright>=1.40.0",
     "anthropic>=0.40.0",
     "aiohttp>=3.9.0",
+    "fastapi>=0.100.0",
+    "uvicorn>=0.24.0",
 ]
 
 [project.optional-dependencies]
