--- a/.gitignore
+++ b/.gitignore
@@ -206,6 +206,10 @@ marimo/_static/
 marimo/_lsp/
 __marimo__/
 
+# Claude Code
+.claude/
+CLAUDE.md
+
 # ===================
 # Project-specific
 # ===================
